<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment"
    android:background="#262626">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_image"
        android:backgroundTint="@color/white"
        app:layout_constraintVertical_bias="0.3"
        android:alpha="0.9"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.65"
        android:gravity="center">

        <EditText
            android:id="@+id/et_username_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/et_username"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:inputType="textVisiblePassword|textNoSuggestions"/>

        <EditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/et_password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_submit_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/btn_login"
            android:textColor="@color/black"
            android:alpha="0.9"
            android:textSize="20sp"
            android:layout_marginTop="12dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>